# HotelManagementSystem

./: CMakeLists.txt  README.md  libholder.h  main.cpp
Data/: Customers.csv  Rooms.csv
Enums/: RoomStatus.h  RoomTypes.h
Management/: Management.cpp  Management.h
Person/: Person.cpp  Person.h
Room/: Room.cpp  Room.h
System/: System.cpp  System.h
